--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"db:studio": "drizzle-kit studio --config=drizzle.config.ts"
 	},
 	"dependencies": {
+		"@auth/drizzle-adapter": "^1.1.0",
+		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "^0.10.1",
@@ -19,6 +21,7 @@
 		"drizzle-orm": "^0.30.10",
 		"lucide-react": "^0.379.0",
 		"next": "14.2.3",
+		"next-auth": "^5.0.0-beta.18",
 		"postgres": "^3.4.4",
 		"react": "^18",
 		"react-dom": "^18",
