--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.1.0",
 		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "^0.10.1",
 		"class-variance-authority": "^0.7.0",
@@ -22,6 +24,7 @@
 		"lucide-react": "^0.379.0",
 		"next": "14.2.3",
 		"next-auth": "^5.0.0-beta.18",
+		"next-themes": "^0.3.0",
 		"postgres": "^3.4.4",
 		"react": "^18",
 		"react-dom": "^18",
