--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: "3.9"
+version: '3.9'
 services:
-    bid-buddy-db:
-        image: postgres
-        restart: always
-        container_name: bid-buddy-db
-        ports:
-            - 5432:5432
-        environment:
-            POSTGRES_PASSWORD: example
-            PGDATA: /data/postgres
-        volumes:
-            - postgres:/data/postgres
+  bid-buddy-db:
+    image: postgres
+    restart: always
+    container_name: bid-buddy-db
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: example
+      PGDATA: /data/postgres
+    volumes:
+      - postgres:/data/postgres
 
 volumes:
-    postgres:
+  postgres:
