--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-	"name": "bid_buddy",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"db:push": "drizzle-kit push --config=drizzle.config.ts",
-		"db:studio": "drizzle-kit studio --config=drizzle.config.ts"
-	},
-	"dependencies": {
-		"@auth/drizzle-adapter": "^1.1.0",
-		"@radix-ui/react-avatar": "^1.0.4",
-		"@radix-ui/react-dialog": "^1.0.5",
-		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-navigation-menu": "^1.1.4",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-tabs": "^1.0.4",
-		"@t3-oss/env-nextjs": "^0.10.1",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"drizzle-orm": "^0.30.10",
-		"lucide-react": "^0.379.0",
-		"next": "14.2.3",
-		"next-auth": "^5.0.0-beta.18",
-		"next-themes": "^0.3.0",
-		"postgres": "^3.4.4",
-		"react": "^18",
-		"react-dom": "^18",
-		"tailwind-merge": "^2.3.0",
-		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.8"
-	},
-	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"drizzle-kit": "^0.21.4",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.3",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
-	}
+  "name": "bid_buddy",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:push": "drizzle-kit push --config=drizzle.config.ts",
+    "db:studio": "drizzle-kit studio --config=drizzle.config.ts"
+  },
+  "dependencies": {
+    "@auth/drizzle-adapter": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.10",
+    "lucide-react": "^0.379.0",
+    "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.18",
+    "next-themes": "^0.3.0",
+    "postgres": "^3.4.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "drizzle-kit": "^0.21.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "prettier": "^3.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
